--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,15 +6,15 @@
       {
           "type": "shell",
           "label": "g++", //这里注意一下，见下文
-          "command": "E:/BaiduNetdiskDownload/mingw64/bin/g++.exe",
+          "command": "D:\\C++\\mingw64\\bin\\g++.exe",
           "args": [
               "-g",
               "${file}",
               "-o",
-              "${fileDirname}\\${fileBasenameNoExtension}.exe"
+              "${fileDirname}\\src\\${fileBasenameNoExtension}.exe"
           ],
           "options": {
-              "cwd": "E:\\BaiduNetdiskDownload\\mingw64\\bin"
+              "cwd": "D:\\C++\\mingw64\\bin\\"
           },
           "problemMatcher": [
               "$gcc"
